--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <link rel="stylesheet" href="styles.css"></link>
 </head>
 <body ng-controller="MainController">
-    
+
     {{thisAppIsBroken}}
-    
+    <div ng-repeat ="user in users" ng-class = "{favorite : user.isFavorite}">
+    {{user.first_name}}
+    {{user.last_name}}
+    <br/>
+    <img ng-src = "{{user.avatar}}"/>
+    <br/>
+    <button ng-click = "toggleFavorite($index)">Toggle Favorite</button>
+    <hr/>
+  </div>
+
      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
      <script src="app.js"></script>
      <script src="controller.js"></script>
+     <script src = "mainService.js"></script>
 </body>
 </html>
